<resources>
    <string name="app_name">Meet Up</string>
    <string name="contentDescription">app name</string>
    <string name="cs_tech">CS TECH</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign up</string>
    <string name="create_account">CREATE ACCOUNT</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="take_photo">Take Photo</string>
    <string name="phoneLabel">Phone</string>
    <string name="phone_number">Phone Number + DDD</string>
    <string name="cpf">CPF</string>
    <string name="register">Register</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="RecyclerView">RecyclerView</string>
    <string name="erro_field_cannot_be_empty">Field cannot be empty</string>
    <string name="erro_password_too_short">Password is too short. Minimum 6 digits</string>
    <string name="erro_password_too_long">Password is too long. Maximum 8 digits</string>
    <string name="erro_password_conditions">Password must have at least one digit(0–9) and one letter(a-Z)</string>
    <string name="erro_invalid_email_adress">Invalid email address</string>
    <string name="cpf_mask">###.###.###-##</string>
    <string name="erro_invalid_cpf">Invalid CPF</string>
    <string name="app_bar_title">CS TECH</string>
    <string name="erro_invalid_phone_number">Invalid phone number</string>
    <string name="erro_unregistred_email">Unregistred Email</string>
    <string name="myFirstName">CAIO</string>
    <string name="myLastName">BASTOS</string>
    <string name="go_to_recyclerview">Go to RecyclerView</string>
    <string name="recyclreView">RecyclerView</string>
    <string name="id">ID</string>
    <string name="name">Name</string>
    <string name="timeMessage">%1s:%2s</string>
    <string name="dateMessage">%1s-%2s-%3s</string>
    <string name="facebook_app_id">2863671627296193</string>
    <string name="fb_login_protocol_scheme">fb2863671627296193</string>
    <string name="username">Username</string>
    <string name="users_list">Users List</string>
    <string name="empty">" "</string>
    <string name="welcomeMessage">"Bem Vindo %1$s %2$s"</string>
    <string name="streetLabel">Street</string>
    <string name="cityLabel">City</string>
    <string name="suiteLabel">Suite</string>
    <string name="zipCodeLabel">ZipCode</string>
    <string name="userDetail">User Detail</string>
    <string name="usersList">Users List</string>
    <string name="address">Address</string>
    <string name="time_picker">Time Picker</string>
    <string name="date_picker">Date Picker</string>
    <string name="map">Map</string>
    <string name="pick_date_and_time">Birthday</string>
    <string name="facebook_login">Facebook Login</string>
    <string name="login_with_google">Login with Google</string>
    <string name="meetup">MeetUp</string>
    <string name="or">Or</string>
    <string name="login_anonymously">Login Anonymously</string>
    <string name="create_new_account">Create new account</string>
    <string name="signin">SignIn</string>
    <string name="google_sign">Google Sign</string>
    <string name="login_with_email">Login with Email</string>
    <string name="logout">Logout</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="login">Login</string>
    <string name="maps">Map</string>
    <string name="users">Users</string>
    <string name="share">SHARE</string>
    <string name="website">Website</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="hour_of_birth">Hour of Birth</string>
    <string name="connectionErrorDialogMsg">Cannot connect to the internet. Please check your internet connection</string>
    <string name="connectionErrorDialogTitle">Connection Failure</string>
    <string name="testee">Field Cannot Be Empty</string>
</resources>