<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="#77A0F3"
        app:cardCornerRadius="8dp"
        app:cardElevation="16dp"
        android:layout_margin="8dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/firstName"
            app:layout_constraintTop_toBottomOf="@+id/firstName">

            <ImageView
                android:id="@+id/listRowImage"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_launcher_background"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/firstName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textColor="#fff"
                android:textSize="16sp"
                app:layout_constraintBottom_toTopOf="@+id/userName"
                app:layout_constraintStart_toEndOf="@+id/listRowImage"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="packed" />

            <TextView
                android:id="@+id/userName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/username"
                android:textSize="16sp"
                android:textColor="#fff"
                app:layout_constraintBottom_toTopOf="@+id/idTextView"
                app:layout_constraintStart_toEndOf="@+id/listRowImage"
                app:layout_constraintTop_toBottomOf="@+id/firstName" />

            <TextView
                android:id="@+id/idTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/id"
                android:textColor="#fff"
                android:textSize="16sp"
                app:layout_constraintBottom_toTopOf="@+id/email"
                app:layout_constraintStart_toEndOf="@+id/listRowImage"
                app:layout_constraintTop_toBottomOf="@+id/userName" />

            <TextView
                android:id="@+id/email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="16dp"
                android:text="@string/email"
                android:textColor="#fff"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/listRowImage"
                app:layout_constraintTop_toBottomOf="@+id/idTextView" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</layout>
