<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:layout_margin="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="8dp"
        app:cardElevation="32dp"
        tools:context=".EmailLoginFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email_login_textInput"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="32dp"
                style="Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                >

            <com.google.android.material.textfield.TextInputEditText

                android:id="@+id/email_login_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#fff"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:singleLine="true" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password_login_textInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                style="Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password_login_editText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:background="#fff"
                    android:inputType="textEmailAddress"
                    android:singleLine="true" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/signin_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:background="@drawable/round_btn_login"
                android:text="@string/signin"/>

            <TextView
                android:id="@+id/create_new_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/create_new_account"
                android:textColor="@color/fb_blue"
                android:textStyle="bold"
                android:padding="12dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:gravity="center"/>

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</layout>