<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".SecondActivity">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/registrationFragmentToolBar"
                android:layout_width="match_parent"
                android:layout_height="?android:attr/actionBarSize"
                android:background="#4477DF"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:title="@string/sign_up"
                app:titleTextColor="#FFF" />

            <TextView
                android:id="@+id/registerScreenTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:layout_marginBottom="32dp"
                android:text="@string/create_account"
                android:textAllCaps="false"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/firstNameTextInputLayout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/registrationFragmentToolBar" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/firstNameTextInputLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintBottom_toTopOf="@+id/lastNameTextInputLayout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/registerScreenTitle">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/registrationFirstNameEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/first_name"
                    android:singleLine="true" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/lastNameTextInputLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                app:layout_constraintBottom_toTopOf="@+id/registrationEmailTextInputLayout"
                app:layout_constraintEnd_toEndOf="@+id/firstNameTextInputLayout"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="@+id/firstNameTextInputLayout"
                app:layout_constraintTop_toBottomOf="@+id/firstNameTextInputLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/registrationLastNameEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/last_name"
                    android:singleLine="true" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/registrationEmailTextInputLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                app:layout_constraintBottom_toTopOf="@+id/phoneNumberTextInputLayout"
                app:layout_constraintEnd_toEndOf="@+id/lastNameTextInputLayout"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="@+id/lastNameTextInputLayout"
                app:layout_constraintTop_toBottomOf="@+id/lastNameTextInputLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/registrationEmailEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:singleLine="true" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/phoneNumberTextInputLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                app:layout_constraintBottom_toTopOf="@+id/cpfTextInputLayout"
                app:layout_constraintEnd_toEndOf="@+id/registrationEmailTextInputLayout"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="@+id/registrationEmailTextInputLayout"
                app:layout_constraintTop_toBottomOf="@+id/registrationEmailTextInputLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/registrationPhoneNumberEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/phone_number"
                    android:inputType="number"
                    android:singleLine="true" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/cpfTextInputLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                app:layout_constraintBottom_toTopOf="@+id/registrationPasswordTextInputLayout"
                app:layout_constraintEnd_toEndOf="@+id/phoneNumberTextInputLayout"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="@+id/phoneNumberTextInputLayout"
                app:layout_constraintTop_toBottomOf="@+id/phoneNumberTextInputLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/cpfEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/cpf"
                    android:inputType="number"
                    android:singleLine="true" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/registrationPasswordTextInputLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                app:layout_constraintBottom_toTopOf="@+id/registerButton"
                app:layout_constraintEnd_toEndOf="@+id/cpfTextInputLayout"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="@+id/cpfTextInputLayout"
                app:layout_constraintTop_toBottomOf="@+id/cpfTextInputLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/registrationPasswordEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:singleLine="true" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/registerButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:layout_marginBottom="16dp"
                android:padding="16dp"
                android:text="@string/register"
                app:backgroundTint="#4477DF"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/registrationPasswordTextInputLayout"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="@+id/registrationPasswordTextInputLayout"
                app:layout_constraintTop_toBottomOf="@+id/registrationPasswordTextInputLayout" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</layout>