<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".MainActivity">

            <ImageView
                android:id="@+id/logo_image"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_launcher_background"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/guideline2"
                tools:ignore="ImageContrastCheck" />

            <TextView
                android:id="@+id/app_name_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/cs_tech"
                android:textColor="#3A60AA"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/logo_image" />


            <Button
                android:orientation="horizontal"
                android:background="@color/blue"
                android:id="@+id/login_button"
                style="@style/ButtonStyle"
                android:layout_width="0dp"
                android:layout_height="44dp"
                android:text="@string/login"
                android:textColor="#000000"
                app:layout_constraintBottom_toTopOf="@+id/forgot_your_password_textView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fb_btn" />

            <RelativeLayout
                android:id="@+id/fb_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:background="#B2B8C5"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintBottom_toTopOf="@id/login_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/google_btn">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        style="@style/login_img_style"
                        android:layout_width="@dimen/login_btn_icon_size"
                        android:layout_height="@dimen/login_btn_icon_size"
                        android:layout_marginEnd="16dp"
                        android:src="@drawable/facebook"
                        android:contentDescription="@string/app_name" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:gravity="center"
                        android:text="@string/facebook_login"
                        android:textStyle="bold" />
                </RelativeLayout>

                <com.facebook.login.widget.LoginButton
                    android:id="@+id/fb_login_button"
                    style="@style/ButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerInParent="true"
                    android:visibility="invisible" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/google_btn"
                style="@style/ButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="#EFF0F1"

                android:gravity="center_vertical"
                app:layout_constraintBottom_toTopOf="@id/fb_btn"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/app_name_textView"
                app:layout_constraintVertical_chainStyle="packed">

                <RelativeLayout
                    android:id="@+id/google_sign"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#E9EBEF"
                    android:gravity="center_vertical">

                    <ImageView
                        style="@style/login_img_style"
                        android:layout_width="@dimen/login_btn_icon_size"
                        android:layout_height="@dimen/login_btn_icon_size"
                        android:layout_marginEnd="16dp"
                        android:contentDescription="@string/app_name"
                        android:src="@drawable/google" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:gravity="center"
                        android:text="Google Sign"
                        android:textStyle="bold" />

                </RelativeLayout>

                <com.google.android.gms.common.SignInButton
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/login_button_size"
                    android:background="#1575D5"
                    android:visibility="invisible" />
            </RelativeLayout>


            <TextView
                android:id="@+id/forgot_your_password_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/forgot_your_password"
                app:layout_constraintBottom_toTopOf="@+id/dont_have_account_textView"
                app:layout_constraintEnd_toEndOf="@+id/login_button"
                app:layout_constraintStart_toStartOf="@+id/login_button" />

            <TextView
                android:id="@+id/dont_have_account_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="24dp"
                android:text="@string/don_t_have_an_account"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/signUpTextView"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent" />

            <!--TODO: Usar botao ao inves do texto        -->
            <TextView
                android:id="@+id/signUpTextView"
                android:layout_width="68dp"
                android:layout_height="20dp"
                android:text="@string/sign_up"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/dont_have_account_textView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/dont_have_account_textView"
                app:layout_constraintTop_toTopOf="@+id/dont_have_account_textView" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.1" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</layout>